fixed spacing for city name/temp

--- a/styles/index.css
+++ b/styles/index.css
@@ -31,8 +31,13 @@ header:hover {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 5px;
+    /* margin-bottom: 5px; */
     font-size: 2vw;
+}
+
+#degrees {
+    display: flex;
+    flex-direction: row;
 }
 
 #temp {
